CAMEL-10141: make camel-example-spring-jms tests pass on Java 9