@@ -128,6 +128,22 @@
         <target.main.class>org.apache.camel.example.client.CamelClientEndpoint</target.main.class>
       </properties>
     </profile>
+    <profile>
+      <id>jdk9-build</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-modules java.xml.bind --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
   <build>
 
@@ -168,5 +184,4 @@
     </plugins>
 
   </build>
-
 </project>
